# whoop-coach

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  dev.db  pyproject.toml  railway.toml  task.md  whoop-coach-task.md
alembic/: env.py
alembic/versions/: 20260104_1919_636804fc1463_add_video_pendinglog_feedback.py  20260105_1502_cb0acf7393e4_add_stage3_feedback_fields.py  20260105_1916_8a43d7a965ec_add_webhook_events_and_daily_plans.py  20260106_1358_33660aa2d477_add_kb_capabilities.py  20260106_1527_video_memory_kb_used.py  20260106_1606_whoop_snapshot.py  20260110_2230_fix_webhook_status_enum.py
scripts/: check_user.py
src/whoop_coach/: __init__.py  config.py  crypto.py  dev.py  main.py  matching.py  smart_questions.py  webhook_processor.py  youtube.py
src/whoop_coach/api/: app.py  routes.py
src/whoop_coach/bot/: app.py  handlers.py  keyboards.py
src/whoop_coach/db/: models.py  session.py
src/whoop_coach/planner/: __init__.py  constraints.py  generator.py  options.py  scoring.py  weights.py
src/whoop_coach/videos/: __init__.py  service.py
src/whoop_coach/whoop/: __init__.py  client.py
tests/: test_config.py  test_matching.py  test_models.py  test_planner.py  test_smart_questions.py  test_video_last_aggregates.py  test_video_service.py  test_weights.py  test_youtube.py
